CAY-2389 DbEntity qualifier with DbPath expression translates into wrong SQL
CAY-2392 Modeler: Unable to remove DataNode
CAY-2397 Modeler: Unable to set enum:value as Entity qualifier
CAY-2401 Modeler: NPE in ObjEntity sync action
CAY-2405 Broken prefetch of entity with inheritance and attribute with custom java type
CAY-2411 Wrong resolution of ExtendedType with ValueObjectType for inherited class
CAY-2418 Modeler: unable to edit entity selected via Search
CAY-2419 Modeler: Not changing highlight on selecting search results within one entity
CAY-2420 Modeler: search is not performed for Stored Procedures
CAY-2425 Modeler: Migrate DB Direction field is locked if no option was selected in dropdown list
CAY-2427 Modeler: Undo throws exception
CAY-2429 Generate classes: Invalid template type: EMBEDDABLE_SINGLE_CLASS
CAY-2430 Modeler: Redo throws NPE

----------------------------------
Release: 4.1.M1
Date:
----------------------------------
Changes/New Features:

CAY-2152 Redesign project file upgrade system
CAY-2329 Update project dependencies
CAY-2330 Field based data objects
CAY-2335 New XML loading/saving mechanics with support of plugable handlers
CAY-2336 Support for comments in Modeler
CAY-2339 Compatibility module to support old versions of projects at runtime
CAY-2344 Modeler: Save ER-Graph and class diagram
CAY-2345 Own template renderer as a replacement for Velocity
CAY-2346 Field-based data object with Map-based storage fallback
CAY-2351 Remove commons-collections usage completely

Bug Fixes:

CAY-2312 Modeler: Undo does not work for checkboxes
CAY-2318 Modeler: Query. Exception after Undo clicking
CAY-2319 Modeler: Embeddable > Attributes. Undo does not cancel pasted objects
CAY-2321 cdbimport: Reverse relationship is not created after adding and rev engineeering new db table
CAY-2323 Modeler: Graph. No warning while saving the image with existing name
CAY-2331 cgen: broken templates for data map